pt-br/books/fdp-primer: Sync with en e5b1222
Obtained from:	https://translate-dev.freebsd.org

--- a/documentation/content/pt-br/books/fdp-primer/asciidoctor-primer/_index.adoc
+++ b/documentation/content/pt-br/books/fdp-primer/asciidoctor-primer/_index.adoc
@@ -1,7 +1,7 @@
 ---
 description: 'Uma breve introdução ao Asciidoctor'
 next: books/fdp-primer/rosetta
-path: "/books/fdp-primer/asciidoctor-primer/"
+path: /books/fdp-primer/asciidoctor-primer/
 prev: books/fdp-primer/doc-build
 showBookMenu: 'true'
 tags: ["AsciiDoc", "Asciidoctor", "Primer", "Introduction", "Guide"]
@@ -112,9 +112,9 @@ A sintaxe a seguir não está correta.
 ....
 = Título do Documento
 
-== Nível 2
+== Nível 1
 
-==== Nível 4
+==== Nível 3
 ....
 ====
 
@@ -198,7 +198,7 @@ Como a documentação do Asciidoctor descreve, a macro `link` não é necessári
 ====
 
 [[asciidoctor-links-internal]]
-=== Link interno
+=== Links para outro livro ou artigo
 
 Para apontar para outro livro ou artigo, as variáveis Asciidoctor devem ser usadas. Por exemplo, se estamos no artigo `cups` e queremos apontar para `ipsec-must`, esses passos devem ser usados.
 
@@ -217,6 +217,36 @@ extref:{ipsec-must}[IPSec-Must article]
 E isso seria processado como.
 +
 extref:{ipsec-must}[IPSec-Must article]
+
+[NOTE]
+====
+A macro `extref` é definida como uma extensão. Ela é projetada para renderizar o link correto entre as diferentes saídas
+====
+
+=== Links para o mesmo arquivo ou para outro arquivo no mesmo livro
+
+Os livros são estruturados em diretórios diferentes para manter um layout sensato. Para criar um link de um subdiretório de um livro para outro subdiretório do mesmo livro, use a macro `crossref`:
+....
+crossref:doc-build[documentation-makefile]
+....
+E isso seria renderizado como
+
+crossref:doc-build[documentation-makefile, Este link]
+
+[NOTE]
+====
+A macro `crossref` é definida como uma extensão. Ela é projetada para renderizar o link correto entre as diferentes saídas
+====
+
+[NOTE]
+====
+Use a macro `crossref` para links intra-documento também. Embora possa ser inconveniente escrever o nome do documento atual, ela garante que o link correto seja renderizado entre as diferentes saídas
+====
+
+[WARNING]
+====
+Não use nem a macro `xref` nem seu atalho `<<` `>>`. Eles não funcionam bem em todos os formatos de saída.
+====
 
 [[asciidoctor-images-icons]]
 == Imagens e Ícones
