--- a/documentation/content/pt-br/books/fdp-primer/editor-config/_index.adoc
+++ b/documentation/content/pt-br/books/fdp-primer/editor-config/_index.adoc
@@ -1,7 +1,7 @@
 ---
 description: 'Configuração usada nos editores de textos do Projeto de Documentação do FreeBSD'
 next: books/fdp-primer/trademarks
-path: "/books/fdp-primer/editor-config/"
+path: /books/fdp-primer/editor-config/
 prev: books/fdp-primer/writing-style
 showBookMenu: 'true'
 tags: ["editor", "configuration", "vim", "emacs", "FreeBSD"]
@@ -52,7 +52,7 @@ Ajustar a configuração do editor de texto pode tornar o trabalho nos arquivos 
 [[editor-config-vim]]
 == Vim
 
-Instale o package:editors/vim[], ou package:editors/vim-console[], em seguida siga as instruções em <<editor-config-vim-config>>. Usuários mais avançados podem usar um linter mais adequado como o link:https://github.com/dense-analysis/ale[Ale] que também pode atuar como um link:https://langserver.org/[Protocolo de Servidor de Idiomas] do Vim.
+Instale o package:editors/vim[] e em seguida siga as instruções em crossref:editor-config[editor-config-vim-config]. Usuários mais avançados podem usar um linter mais adequado como o link:https://github.com/dense-analysis/ale[Ale] que também pode atuar como um link:https://langserver.org/[Protocolo de Servidor de Idiomas] do Vim.
 
 [[editor-config-vim-use]]
 === Uso
@@ -170,23 +170,6 @@ A configuração acima removerá automaticamente a linha final, o espaço final 
 
 Instale-o a partir de package:editors/emacs[] ou package:editors/emacs-devel[].
 
-[[editor-config-emacs-validation]]
-=== Validação
-
-O modo nxml do Emacs usa esquemas NG relax compacto para validar o XML. Um esquema NG relax compacto para a extensão do FreeBSD para DocBook 5.0 está incluído no repositório de documentação. Para configurar o modo nxml para validar usando este esquema, crie [.filename]#~/.emacs.d/schema/schemas.xml# e adicione estas linhas ao arquivo:
-
-[source, xml]
-.`~/.emacs.d/schema/schemas.xml`
-....
-<locatingRules xmlns="http://thaiopensource.com/ns/locating-rules/1.0">
-  <documentElement localName="section" typeId="DocBook" />
-  <documentElement localName="chapter" typeId="DocBook" />
-  <documentElement localName="article" typeId="DocBook" />
-  <documentElement localName="book" typeId="DocBook" />
-  <typeId id="DocBook" uri="/usr/local/share/xml/docbook/5.0/rng/docbook.rnc" />
-</locatingRules>
-....
-
 [[editor-config-emacs-igor]]
 === Revisão Automatizada com Flycheck e Igor
 
@@ -230,6 +213,7 @@ Novamente, adicione essas linhas ao arquivo de inicialização do Emacs para tor
 
 Para aplicar configurações específicas para o projeto de documentação do FreeBSD, crie o arquivo [.filename]#.dir-locals.el# no diretório raiz do repositório de documentação e adicione estas linhas ao arquivo:
 
+[source, emacs-lisp]
 ....
 ;;; Directory Local Variables
 ;;; For more information see (info "(emacs) Directory Variables")
@@ -246,7 +230,7 @@ Para aplicar configurações específicas para o projeto de documentação do Fr
 [[editor-config-nano]]
 == nano
 
-Instale o aplicativo partir de package:editors/nano[] ou package:editors/nano-devel[].
+Instale o aplicativo package:editors/nano[].
 
 [[editor-config-nano-config]]
 === Configuração
