doc/pt-br: Add search translation

--- a/documentation/themes/beastie/i18n/pt-br.toml
+++ b/documentation/themes/beastie/i18n/pt-br.toml
@@ -50,7 +50,7 @@ other = "Última alteração em"
 other = "por"
 
 [search]
-other = "Search"
+other = "Pesquisar"
 
 [stale-warning-message]
 other = "Esta tradução pode estar desatualizada. Para ajudar com as traduções, acesse a"
