--- a/website/content/en/status/report-2024-07-2024-09/pinephone.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/pinephone.adoc
@@ -9,11 +9,10 @@ A new project trying to make FreeBSD usable on the Pinephone Pro has been starte
 
 The current FreeBSD RELEASE images already boot on a Pinephone Pro, but no screen output or other devices are supported. The aim is to step by step support additional components so that the device one day might be usable as a highly mobile FreeBSD device.
 
-Over the last few weeks, the groundwork has been implemented like getting used to the device, cross-compiling and booting a 15.0-CURRENT custom kernel as well as toggling the LEDs (red/green/blue in the front).
+Over the last few weeks, the groundwork has been implemented like getting used to the device, cross-compiling and booting a 15.0-CURRENT custom kernel as well as toggling the LEDs (red/green/blue in the front). Also, the LCD backlight can be turned on already and the USB-C hub is enabled even though it is not yet functional due to missing power management support.
 
-FreeBSD currently does not seem to support any of the components of the Pinephone Pro out of the box, so the next steps will be to simplify the development process also for other who might be interested to join the effort.
-The first item to be worked on is supporting text output on the screen. 
+The next step is to write a driver for the RK818 power management chip. Without it, most of the hardware will not power on like the USB-C port above. This will be done by trying to modify the existing RK808 driver. RK818 support should then make it possible to access a lot more of the devices, e.g. allowing to enable the screen, USB peripherals or WiFi.
 
 Additional feedback and testers are welcome.
 
-Sponsors: Honeyguide Group
+Sponsor: Honeyguide Group
