--- a/website/content/en/releases/13.4R/relnotes.adoc
+++ b/website/content/en/releases/13.4R/relnotes.adoc
@@ -312,7 +312,7 @@ The FreeBSD stable/14 and earlier branches will retain existing 32-bit kernel an
 Ports will retain existing support for building ports and packages for 32-bit systems on stable/14 and earlier branches as long as those branches are supported by the ports system.
 However, all 32-bit platforms are Tier-2 or Tier-3, and support for individual ports should be expected to degrade as upstreams deprecate 32-bit platforms.
 
-With the current support schedule, stable/14 will reach end of life (EOL) around 5 years after the release of FreeBSD {releasePrev}.
+With the current support schedule, stable/14 will reach end of life (EOL) around 5 years after the release of FreeBSD 14.0-RELEASE.
 The EOL of stable/14 will mark the end of support for deprecated 32-bit platforms, including source releases, pre-built packages, and support for building applications from ports.
 With the release of {releasePrev} in November 2023, support for deprecated 32-bit platforms will end in November 2028.
 
