Handbook/x11: Fix trivial typo
Reviewed by:	olivier
Submitted by:	ajoly18
Closes:		https://github.com/freebsd/freebsd-doc/pull/413

--- a/documentation/content/fr/books/handbook/x11/_index.adoc
+++ b/documentation/content/fr/books/handbook/x11/_index.adoc
@@ -77,7 +77,7 @@ Avant de lire ce chapitre, vous devrez:
 Alors qu'il n'est pas nécessaire de comprendre tout le détail des divers composants du système X Window, ni comment ils interagissent entre eux, une certaine connaissance de base de ces composants peut être utile.
 
 Le serveur X::
-X a été conçu dès le départ centré autour du réseau, et adopte un modèle "client-serveur". Dans ce modèle, le "serveur X" tourne sur l'ordinateur sur lequel sont branchés le clavier, le moniteur et la souris. Le serveur est responsable de tâches telles que la gestion de l'affichage, des entrées en provenance du clavier et de la souris, et les entrées ou sorties d'autres périphériques comme une tablette ou un vidéo-projecteur. Cela jette le trouble chez certaines personnes, parce que la terminologie X est exactement le contraire de ce à quoi ils s'attendent. Ils s'attendent à ce que le "serveur X" soit la grosse machine puissante au fond du couloir, et que le "client X" soit a machine sur leur bureau.
+X a été conçu dès le départ centré autour du réseau, et adopte un modèle "client-serveur". Dans ce modèle, le "serveur X" tourne sur l'ordinateur sur lequel sont branchés le clavier, le moniteur et la souris. Le serveur est responsable de tâches telles que la gestion de l'affichage, des entrées en provenance du clavier et de la souris, et les entrées ou sorties d'autres périphériques comme une tablette ou un vidéo-projecteur. Cela jette le trouble chez certaines personnes, parce que la terminologie X est exactement le contraire de ce à quoi ils s'attendent. Ils s'attendent à ce que le "serveur X" soit la grosse machine puissante au fond du couloir, et que le "client X" soit la machine sur leur bureau.
 
 Le client X::
 Chaque application X, comme XTerm ou Firefox est un "client". Un client envoie des messages au serveur comme "Dessine une fenêtre aux coordonnées suivantes", et le serveur renvoie au client des messages du type "L'utilisateur vient de cliquer sur le bouton OK".
