Add advisories affecting 13.3R, 13.4R, 14.0R, and 14.1R
FreeBSD-SA-24:15.bhyve affects all supported releases
FreeBSD-SA-24:16.libnc affects all supported releases

--- a/website/content/en/releases/13.4R/errata.adoc
+++ b/website/content/en/releases/13.4R/errata.adoc
@@ -44,9 +44,8 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 [width="100%",cols="40%,30%,30%",options="header",]
 |===
 |Advisory |Date |Topic
-
-|No advisories.||
-
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:15.bhyve.asc[FreeBSD-SA-24:15.bhyve] |19 September 2024 |bhyve(8) out-of-bounds read access via XHCI emulation
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:16.libnv.asc[FreeBSD-SA-24:16.libnv] |19 September 2024 |Integer overflow in libnv
 |===
 
 [[errata]]
