Update mainsite -> about -> applications
TextMaker seems to be deprecated for a decade or so
https://www.freshports.org/editors/softmaker-office/

LLVM has replaced the GCC nowadays

lang/icon is deprecated
https://www.freshports.org/lang/icon/

Approved by: Pau Amma, manu(mentor)

Differential revision: https://reviews.freebsd.org/D46646

--- a/website/content/en/applications.adoc
+++ b/website/content/en/applications.adoc
@@ -22,9 +22,9 @@ Because FreeBSD is based on 4.4BSD, an industry-standard version of UNIX, it is 
 Here are some examples of the environments in which FreeBSD is used:
 
 * *Internet services.* Many Internet Service Providers (ISPs) find FreeBSD ideal, running WWW, Usenet news, FTP, Email, and other services. Ready-to-run software like the http://nginx.org[NGINX] or http://www.apache.org/[Apache] web server or the http://proftpd.org/[ProFTPD] or http://security.appspot.com/vsftpd.html[vsftpd] FTP server make it easy to set up a business or community-centered ISP. Of course, with FreeBSD's unbeatable link:../internet/[networking], your users will enjoy high speed, reliable services.
-* *X Window workstation.* From an inexpensive X terminal to an advanced X display, FreeBSD works quite well. Free X software (http://x.org/[X.Org](T)) comes with the system. http://www.nvidia.com/[NVIDIA] offers native drivers for their high-performance graphics hardware, and the industry standard http://www.opengroup.org/motif/[Motif](R) and http://www.opengl.org/[OpenGL](R) libraries are supported. The http://xfce.org/[Xfce] and http://lxde.org/[LXDE] products provide a desktop environment. The http://www.kde.org[KDE] and http://www.gnome.org[GNOME] desktop environments also enjoy full support and provide office suite functionality, with further good functionality available in the https://www.libreoffice.org/[LibreOffice], http://www.openoffice.org/[OpenOffice.Org] and http://www.softmaker.com/en/[TextMaker] products.
+* *X Window workstation.* From an inexpensive X terminal to an advanced X display, FreeBSD works quite well. Free X software (https://x.org/[X.Org](T)) comes with the system. https://www.nvidia.com/[NVIDIA] offers native drivers for their high-performance graphics hardware, and the industry standard https://www.opengroup.org/motif/[Motif](R) and https://www.opengl.org/[OpenGL](R) libraries are supported. The https://xfce.org/[Xfce] and https://lxde.org/[LXDE] products provide a desktop environment. The https://www.kde.org[KDE] and https://www.gnome.org[GNOME] desktop environments also enjoy full support and provide office suite functionality, with further good functionality available in the https://www.libreoffice.org/[LibreOffice] and https://www.openoffice.org/[OpenOffice.Org] products.
 * *Networking.* From packet filtering to routing to name service, FreeBSD can turn any PC into a Internet firewall, email host, print server, PC/NFS server, and more.
-* *Software development.* A suite of development tools comes with FreeBSD, including the GNU C/C++ compiler and debugger. The LLVM-based clang suite is also provided and will eventually replace the GNU suite. Java(R) and Tcl/Tk development are also possible for example, and more esoteric programming languages like Icon work just fine, too. And FreeBSD's shared libraries have always been easy to make and use. You can also choose from a wide range of popular and powerful editors, such as Emacs and Vim.
+* *Software development.* A suite of https://docs.freebsd.org/en/books/developers-handbook/tools/[development tools] comes with FreeBSD, including the LLVM-based clang C/C++ compiler and debugger. Java(R) and Tcl/Tk development are also possible for example. And FreeBSD's shared libraries have always been easy to make and use. You can also choose from a wide range of popular and powerful editors, such as Emacs and Vim.
 * *Net surfing.* A real UNIX workstation makes a great Internet surfboard. FreeBSD versions of http://www.chromium.org/Home[Chromium] and http://www.mozilla.org/firefox/[Firefox] are available for serious web users. Surf the web, publish your own web pages, read Usenet news, and send and receive email with a FreeBSD system on your desktop.
 * *Education and research.* FreeBSD makes an excellent research platform because it includes complete source code. Students and researchers of operating systems or other computer science fields can benefit greatly from such an open and well-documented system.
 * *And much more.* Accounting, action games, MIS databases, scientific visualization, video conferencing, Internet relay chat (IRC), home automation, multiuser dungeons, bulletin board systems, image scanning, and more are all real uses for FreeBSD today.
