--- a/documentation/content/en/books/developers-handbook/tools/_index.adoc
+++ b/documentation/content/en/books/developers-handbook/tools/_index.adoc
@@ -121,14 +121,13 @@ It is very popular in AI (Artificial Intelligence) circles.
 Lisp is an extremely powerful and sophisticated language, but can be rather large and unwieldy.
 +
 Various implementations of Lisp that can run on UNIX(R) systems are available in the Ports Collection for FreeBSD.
-GNU Common Lisp can be found as package:lang/gcl[].
 CLISP by Bruno Haible and Michael Stoll is available as package:lang/clisp[].
-For CMUCL, which includes a highly-optimizing compiler too, or simpler Lisp implementations like SLisp, which implements most of the Common Lisp constructs in a few hundred lines of C code, package:lang/cmucl[] and package:lang/slisp[] are available respectively.
+SLisp, a simpler Lisp implementations, is available as package:lang/slisp[].
 
 Perl::
 Very popular with system administrators for writing scripts; also often used on World Wide Web servers for writing CGI scripts.
 +
-Perl is available in the Ports Collection as package:lang/perl5.24[] for all FreeBSD releases.
+Perl is available in the Ports Collection as package:lang/perl5.36[] for all FreeBSD releases.
 
 Scheme::
 A dialect of Lisp that is rather more compact and cleaner than Common Lisp.
@@ -138,14 +137,10 @@ while it has a high enough level of abstraction to be used in research work.
 Scheme is available from the Ports Collection as package:lang/elk[] for the Elk Scheme Interpreter.
 The MIT Scheme Interpreter can be found in package:lang/mit-scheme[] and the SCM Scheme Interpreter in package:lang/scm[].
 
-Icon::
-Icon is a high-level language with extensive facilities for processing strings and structures.
-The version of Icon for FreeBSD can be found in the Ports Collection as package:lang/icon[].
-
 Lua::
 Lua is a lightweight embeddable scripting language.
 It is widely portable and relatively simple.
-Lua is available in the Ports Collection in package:lang/lua[].
+Lua is available in the Ports Collection in package:lang/lua54[].
 It is also included in the base system as [.filename]#/usr/libexec/flua# for use by base system components.
 Third party software should not depend on [.filename]#flua#.
 
