allanjude is the core team liaison for secteam.

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -151,7 +151,7 @@ Furthermore, it is responsible for resolving software bugs affecting the securit
 The FreeBSD Security Officer Charter describes the duties and responsibilities of the Security Officer in greater detail.
 
 * {gordon} (Officer)
-* {bapt} (Core Team Liaison)
+* {allanjude} (Core Team Liaison)
 * {delphij} (Officer Emeritus, Release Engineering Team Liaison)
 * {des} (Officer Emeritus)
 * {emaste} (Deputy Officer)
